--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.10
-  intro_slider: ^4.2.0
+  page_view_dot_indicator: ^2.1.0
 
 
 dev_dependencies:
