--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.10
   page_view_dot_indicator: ^2.1.0
+  camera: ^0.10.4
 
 
 dev_dependencies:
